[package]
name = "rsquant"
version = "0.1.0"
authors = ["ccyanxyz <ccyanxyz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tick"
path = "src/main.rs"

[dependencies]
lazy_static = "1.2.0"
hex = "0.4"
base64 = "0.12.1"
chrono = "0.4"
percent-encoding = "2.1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
error-chain = { version = "0.12", default-features = false }
ring = "0.16"
reqwest = { version = "0.10", features = ["blocking", "json"] }
tungstenite = "0.10"
url = "2.1"
