[package]
name = "rsquant"
version = "0.1.0"
authors = ["ccyanxyz <ccyanxyz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "tick"
# path = "src/main.rs"
[[bin]]
name = "test"
path = "src/test.rs"

[dependencies]
lazy_static = "1.4.0"
hex = "0.4.2"
base64 = "0.12.1"
chrono = "0.4"
percent-encoding = "1.0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
ring = "0.13.0-alpha"
data-encoding = "2.1.2"
reqwest = { version = "0.10", features = ["blocking", "json"] }
url = "2.1"
